--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -1,12 +1,12 @@
 {% load static %}
+<!-- templates/myapp/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}TrackGuard{% endblock %}</title>
-
+    <title>{% block title %}Bootstrap Sidebar{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -19,79 +19,92 @@
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <!-- Estilos base -->
     <link rel="stylesheet" href="{% static 'css/estilos_base.css' %}">
 
-    {% block extra_css %}{% endblock %}
+    {% block extra_css %}
+    {% endblock %}
 </head>
 <body>
-    <div class="wrapper">
-        <aside id="sidebar" class="expand"> <!-- Añadido la clase expand aquí -->
-            <div class="d-flex">
-                <button class="toggle-btn" type="button">
-                    <i class="lni lni-menu"></i>
-                </button>
-                <div class="sidebar-logo">
-                    <a href="#">TrackGuard</a>
-                </div>
+    <div class="d-flex">
+        <!-- Sidebar -->
+        <aside id="sidebar" class="sidebar-toggle">
+            <div class="sidebar-logo">
+                <a href="#">TrackGuard</a>
             </div>
-            <ul class="sidebar-nav">
+            <!-- Sidebar Navigation -->
+            <ul class="sidebar-nav p-0">
                 <li class="sidebar-item">
                     <a href="{% url 'home' %}" class="sidebar-link">
                         <i class="lni lni-home"></i>
                         <span>Inicio</span>
                     </a>
                 </li>
+
+                <li class="sidebar-header">Administración</li>
+
                 <li class="sidebar-item">
                     <a href="{% url 'administracion_malla' %}" class="sidebar-link">
-                        <i class="lni lni-library"></i>
+                        <i class="lni lni-agenda"></i>
                         <span>Gestión de mallas curriculares</span>
                     </a>
                 </li>
+
                 <li class="sidebar-item">
                     <a href="{% url 'administracion_periodo' %}" class="sidebar-link">
-                        <i class="lni lni-calendar"></i>
-                        <span>Gestión de periodos académicos</span>
+                        <i class="lni lni-agenda"></i>
+                        <span>Gestión periodo académicos</span>
                     </a>
                 </li>
+
+                <li class="sidebar-header">Pages</li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
+                        data-bs-target="#auth" aria-expanded="true" aria-controls="auth">
+                        <i class="lni lni-protection"></i>
+                        <span>Auth</span>
+                    </a>
+                    <ul id="auth" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Login</a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Register</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="sidebar-header">Modelo matemático</li>
                 <li class="sidebar-item">
                     <a href="{% url 'modelo_matematico' %}" class="sidebar-link">
-                        <i class="lni lni-calculator"></i>
+                        <i class="lni lni-popup"></i>
                         <span>Modelo matemático</span>
                     </a>
                 </li>
-                <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
-                        <i class="lni lni-cog"></i>
-                        <span>Opciones Visuales</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
-                        <i class="lni lni-user"></i>
-                        <span>Perfil</span>
-                    </a>
-                </li>
             </ul>
+            <!-- Sidebar Navigation Ends -->
             <div class="sidebar-footer">
                 <a href="{% url 'logout' %}" class="sidebar-link">
                     <i class="lni lni-exit"></i>
-                    <span>Logout</span>
+                    <span>Salir</span>
                 </a>
             </div>
         </aside>
+        <!-- Sidebar Ends -->
+        <!-- Main Component -->
         <div class="main p-3">
-            <div class="container-fluid">
-                {% block content %}
-                    <!-- Aquí va el contenido de cada página -->
-                {% endblock %}
-            </div>
+            <nav class="navbar navbar-expand">
+                <button class="toggler-btn" type="button">
+                    <i class="lni lni-text-align-left"></i>
+                </button>
+            </nav>
+             <div class="container-fluid">
+                    {% block content %}
+
+                    {% endblock %}
+                </div>
         </div>
     </div>
-
-    <!-- Scripts -->
     <script src="{% static 'js/base_script.js' %}"></script>
-
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
