--- a/Prediccion/templates/index.html
+++ b/Prediccion/templates/index.html
@@ -45,7 +45,7 @@
         <div class="text-start">
           <h2 class="display-4">Predice la Deserción Estudiantil con Nuestra Aplicación</h2>
           <p class="lead">Utiliza modelos matemáticos para identificar estudiantes en riesgo</p>
-          <a href="#" class="btn btn-success btn-lg">Empieza Gratis</a>
+          <a href="{% url 'home' %}" class="btn btn-success btn-lg">Empieza Gratis</a>
         </div>
         <div class="text-end">
           <img src="{% static 'img/modelos-matematicos-curso.png' %}" alt="Imagen" class="img-fluid">
